--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,8 @@
-[workspace]
-members = ["crates/*"]
+[package]
+name = "pursuance"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+actix-web = "4.0.0"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
