--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,22 @@ name = "pursuance"
 
 [dependencies]
 actix-web = "4.0.0"
+config = "0.13"
+dotenv = "0.15"
+serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
 
 [dev-dependencies]
 reqwest = "0.11"
