--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,12 @@ name = "pursuance"
 
 [dependencies]
 actix-web = "4.0.0"
+chrono = "0.4.15"
 config = "0.13"
 dotenv = "0.15"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1", features = [ "v4" ]}
 
 [dependencies.sqlx]
 version = "0.6"
