--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ actix-web = "4.0.0"
 chrono = "0.4.15"
 config = "0.13"
 dotenv = "0.15"
+env_logger = "0.9"
+log = "0.4"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = [ "v4" ]}
