--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,14 @@ actix-web = "4.0.0"
 chrono = "0.4.15"
 config = "0.13"
 dotenv = "0.15"
-env_logger = "0.9"
-log = "0.4"
+secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-actix-web = "0.6"
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 uuid = { version = "1", features = [ "v4" ]}
 
 [dependencies.sqlx]
@@ -34,4 +38,5 @@ features = [
 ]
 
 [dev-dependencies]
+once_cell = "1"
 reqwest = "0.11"
