--- a/spec.yaml
+++ b/spec.yaml
@@ -15,3 +15,10 @@ services:
     instance_size_slug: basic-xxs
     routes:
       - path: /
+
+databases:
+  - engine: PG
+    name: pursuance
+    num_nodes: 1
+    size: db-s-dev-database
+    version: "12"
