--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://postgres:password@localhost:5432/pursuance"
+DATABASE_URL="postgres://postgres:password@localhost:5432/pursuance_db"
