--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -5,4 +5,4 @@ database:
   port: 5432
   username: "postgres"
   password: "password"
-  database_name: "pursuance"
+  database_name: "pursuance_db"
