Update db configs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ config = "0.13"
 dotenv = "0.15"
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
+serde-aux = "0.3"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-actix-web = "0.6"
