--- a/spec.yaml
+++ b/spec.yaml
@@ -15,6 +15,22 @@ services:
     instance_size_slug: basic-xxs
     routes:
       - path: /
+    envs:
+      - key: APP_DATABASE__USERNAME
+        scope: RUN_TIME
+        value: ${pursuance-db.USERNAME}
+      - key: APP_DATABASE__PASSWORD
+        scope: RUN_TIME
+        value: ${pursuance-db.PASSWORD}
+      - key: APP_DATABASE__HOST
+        scope: RUN_TIME
+        value: ${pursuance-db.HOST}
+      - key: APP_DATABASE__KEY
+        scope: RUN_TIME
+        value: ${pursuance-db.KEY}
+      - key: APP_DATABASE__DATABASE_NAME
+        scope: RUN_TIME
+        value: ${pursuance-db.DATABASE}
 
 databases:
   - engine: PG
